# youtube-transform

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/youtube_transform/: __init__.py  audio.py  cache.py  cli.py  concat.py  diarize.py  download.py  search.py  sources.py  transcribe.py
tests/: test_search.py
